@@ -1,4 +1,5 @@
 1.1.0
+   - bug [11029] "ForceFedoraPid plugin skal stå før XMLDCHarvester i workflows.xml"
    - bug [11009] "InputPair skal skifte navn til ImmutablePair"
    - bug [10984] "OwnerRelation plugin'et skal fjernes."
    - bug [10983] "RUBHarvester plugin'et skal fjernes"
